# utf8_bender

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: encoder.rs  lib.rs
tests/: encoding.rs
